[gd_scene load_steps=2 format=3 uid="uid://c1cjw0xqwxxjj"]

[ext_resource type="Script" uid="uid://xlcim54oyqqn" path="res://src/scenes/piece_display.gd" id="1_dggjh"]

[node name="InfoBoard" type="MarginContainer"]
custom_minimum_size = Vector2(170, 400)
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Color" type="ColorRect" parent="."]
layout_mode = 2
mouse_filter = 2
color = Color(0.458857, 0.184283, 0.142675, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PieceName" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_vertical = 0
text = "Name"
horizontal_alignment = 1

[node name="FlowContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
script = ExtResource("1_dggjh")

[node name="MoveDisplay" type="GridContainer" parent="VBoxContainer/FlowContainer"]
clip_contents = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 15

[node name="MetadataLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Cost 0"
horizontal_alignment = 2
vertical_alignment = 2
